headers = [
    'centroidparameters.h',
    'channel.h',
    'component.h',
    'data.h',
    'ellipticalcomponent.h',
    'fractionalintegralmodel.h',
    'gaussiancomponent.h',
    'gaussianmodelintegral.h',
    'gaussianparametricellipse.h',
    'integralmodel.h',
    'linearintegralmodel.h',
    'linearsersicmixinterpolator.h',
    'model.h',
    'observation.h',
    'param_defs.h',
    'param_filter.h',
    'parameters.h',
    'parametric.h',
    'parametricellipse.h',
    'parametricmodel.h',
    'psfmodel.h',
    'sersicmix.h',
    'sersicmixcomponent.h',
    'sersicparametricellipse.h',
    'source.h',
    'transforms.h',
    'util.h',
]
install_headers(
    headers,
    subdir : 'gauss2d/fit',
)