headers = [
    'centroidparameters.h',
    'channel.h',
    'chromatic.h',
    'component.h',
    'componentmixture.h',
    'data.h',
    'ellipticalcomponent.h',
    'fractionalintegralmodel.h',
    'gaussiancomponent.h',
    'gaussianmodelintegral.h',
    'gaussianparametricellipse.h',
    'gaussianprior.h',
    'gsl.h',
    'gslimage.h',
    'gslinterpolator.h',
    'gslsersicmixinterpolator.h',
    'integralmodel.h',
    'interpolation.h',
    'linearintegralmodel.h',
    'linearsersicmixinterpolator.h',
    'math.h',
    'model.h',
    'observation.h',
    'param_defs.h',
    'param_filter.h',
    'parameters.h',
    'parametric.h',
    'parametricellipse.h',
    'parametricgaussian1d.h',
    'parametricmodel.h',
    'prior.h',
    'psfmodel.h',
    'sersicmix.h',
    'sersicmixcomponent.h',
    'sersicparametricellipse.h',
    'shapeprior.h',
    'source.h',
    'transforms.h',
    'util.h',
]
install_headers(
    headers,
    subdir : 'gauss2d/fit',
)
