prefix_gauss2d = 'lsst/gauss2d/'
prefix_gauss2d_fit = prefix_gauss2d + 'fit/'
gauss2d_fit_headers = [
    prefix_gauss2d + 'fit.h',
    prefix_gauss2d_fit + 'centroidparameters.h',
    prefix_gauss2d_fit + 'channel.h',
    prefix_gauss2d_fit + 'chromatic.h',
    prefix_gauss2d_fit + 'component.h',
    prefix_gauss2d_fit + 'componentmixture.h',
    prefix_gauss2d_fit + 'data.h',
    prefix_gauss2d_fit + 'ellipticalcomponent.h',
    prefix_gauss2d_fit + 'fractionalintegralmodel.h',
    prefix_gauss2d_fit + 'gaussiancomponent.h',
    prefix_gauss2d_fit + 'gaussianmodelintegral.h',
    prefix_gauss2d_fit + 'gaussianparametricellipse.h',
    prefix_gauss2d_fit + 'gaussianprior.h',
    prefix_gauss2d_fit + 'gsl.h',
    prefix_gauss2d_fit + 'gslinterpolator.h',
    prefix_gauss2d_fit + 'gslsersicmixinterpolator.h',
    prefix_gauss2d_fit + 'integralmodel.h',
    prefix_gauss2d_fit + 'interpolation.h',
    prefix_gauss2d_fit + 'linearintegralmodel.h',
    prefix_gauss2d_fit + 'linearsersicmixinterpolator.h',
    prefix_gauss2d_fit + 'math.h',
    prefix_gauss2d_fit + 'model.h',
    prefix_gauss2d_fit + 'observation.h',
    prefix_gauss2d_fit + 'param_defs.h',
    prefix_gauss2d_fit + 'param_filter.h',
    prefix_gauss2d_fit + 'parameters.h',
    prefix_gauss2d_fit + 'parametric.h',
    prefix_gauss2d_fit + 'parametricellipse.h',
    prefix_gauss2d_fit + 'parametricgaussian1d.h',
    prefix_gauss2d_fit + 'parametricmodel.h',
    prefix_gauss2d_fit + 'prior.h',
    prefix_gauss2d_fit + 'psfmodel.h',
    prefix_gauss2d_fit + 'sersicmix.h',
    prefix_gauss2d_fit + 'sersicmixcomponent.h',
    prefix_gauss2d_fit + 'sersicparametricellipse.h',
    prefix_gauss2d_fit + 'shapeprior.h',
    prefix_gauss2d_fit + 'source.h',
    prefix_gauss2d_fit + 'transforms.h',
    prefix_gauss2d_fit + 'util.h',
]
install_headers(gauss2d_fit_headers, preserve_path : true)
install_headers(
    gauss2d_fit_headers,
    subdir : 'gauss2d/fit',
)
