[project]
name = "gauss2dfit"
authors = [
    {name="Dan Taranu", email="dan.s.taranu@gmail.com"},
]
description = "Python (pybind11) bindings for gauss2dfit"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
	"gauss2d",
    "numpy",
    "pybind11",
    "pytest",
]
version = "0.1.0"

[tool.setuptools]
py-modules = []
