[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lsst-gauss2d-fit"
authors = [
    { name = "Rubin Observatory DataD Management", email = "dm-admin@lists.lsst.org" },
]
description = "Python (pybind11) bindings for gauss2d_fit"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "lsst-gauss2d",
    "numpy",
    "pybind11",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/lsst-dm/gauss2d_fit"

[project.optional-dependencies]
test = [
    "pytest >= 3.2",
]

[tool.pytest.ini_options]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "lsst.gauss2d.__version__" }

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.ruff]
exclude = [
    "src/lsst/gauss2d/fit/__init__.py",
    "tests/*.py",
]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "N802",
    "N803",
    "N806",
    "N812",
    "N815",
    "N816",
    "N999",
    "D100",
    "D102",
    "D104",
    "D105",
    "D107",
    "D200",
    "D203",
    "D205",
    "D213",
    "D400",
    "UP007", # Allow UNION in type annotation
]
select = [
    "E", # pycodestyle
    "F", # pycodestyle
    "N", # pep8-naming
    "W", # pycodestyle
    "D", # pydocstyle
]
