gauss2dfit_sources = [
    'centroidparameters.cc',
    'channel.cc',
    'ellipticalcomponent.cc',
    'fractionalintegralmodel.cc',
    'gaussiancomponent.cc',
    'gaussianmodelintegral.cc',
    'gaussianparametricellipse.cc',
    'gaussianprior.cc',
    'integralmodel.cc',
    'linearintegralmodel.cc',
    'linearsersicmixinterpolator.cc',
    'param_defs.cc',
    'parametricgaussian1d.cc',
    'psfmodel.cc',
    'sersicmix.cc',
    'sersicmixcomponent.cc',
    'sersicparametricellipse.cc',
    'shapeprior.cc',
    'source.cc',
    'transforms.cc',
]
gauss2dfitlib = shared_library('gauss2dfit',
                                gauss2dfit_sources,
                                include_directories : inc,
                                dependencies : depends,
                                install : true,
                                soversion : '0.1.0')
