gauss2dfit_sources = [
    'centroidparameters.cc',
    'channel.cc',
    'ellipticalcomponent.cc',
    'fractionalintegralmodel.cc',
    'gaussiancomponent.cc',
    'gaussianmodelintegral.cc',
    'gaussianparametricellipse.cc',
    'gaussianprior.cc',
    'linearintegralmodel.cc',
    'linearsersicmixinterpolator.cc',
    'gslinterpolator.cc',
    'gslsersicmixinterpolator.cc',
    'param_defs.cc',
    'parametricgaussian1d.cc',
    'prior.cc',
    'psfmodel.cc',
    'sersicmix.cc',
    'sersicmixcomponent.cc',
    'sersicparametricellipse.cc',
    'shapeprior.cc',
    'source.cc',
    'transforms.cc',
]
gauss2dfitlib = shared_library('gauss2dfit',
                                gauss2dfit_sources,
                                include_directories : inc,
                                dependencies : depends,
                                install : true,
                                install_dir : get_option('libdir') / 'lsst',
                                soversion : meson.project_version())